# fhenix-dark-pool

./: .gitignore  hardhat.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
contracts/: FugaziAccountFacet.sol  FugaziBase.sol  FugaziDiamond.sol  FugaziHub.sol  FugaziLPToken.sol  FugaziPoolAction.sol  FugaziPoolActionFacet.sol  FugaziPoolRegistry.sol  FugaziPoolRegistryFacet.sol  FugaziPoolState.sol  FugaziStorageLayout.sol  FugaziViewerFacet.sol  fugaziVault.sol
contracts/interfaces/: IFHERC20.sol  IFugazi.sol
contracts/libraries/: EncMath.sol  FHERC20.sol  FHERC20Mintable.sol
deploy/: deploy.ts  deploy_diamond.ts  deploy_facets.ts  deploy_fherc20mintable.ts  deploy_fherc20s.ts
deployments/testnet/: FHERC20.json  FHERC20Mintable.json  FugaziAccountFacet.json  FugaziDiamond.json  FugaziPoolActionFacet.json  FugaziPoolRegistryFacet.json  FugaziViewerFacet.json
notes/: ne_analysis.aux  ne_analysis.fdb_latexmk  ne_analysis.fls  ne_analysis.tex
tasks/: addFacets.ts  index.ts
