[tool.poetry]
name = "fhenix-dark-pool"
version = "0.1.0"
description = ""
authors = ["kosunghun317 <kosunghun317@kaist.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
ipykernel = "^6.29.4"
eth-ape = "^0.8.4"
vyper = "^0.3.10"
black = {extras = ["jupyter"], version = "^24.4.2"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
